# docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /
 definitions:
+  controllers.LoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
   models.Ticket:
     properties:
       description:
@@ -9,6 +16,15 @@ definitions:
       status:
         type: string
       title:
+        type: string
+    type: object
+  models.User:
+    properties:
+      email:
+        type: string
+      id:
+        type: string
+      name:
         type: string
     type: object
   utils.StandardResponse:
@@ -26,6 +42,64 @@ info:
   title: Ticket System API
   version: "1.0"
 paths:
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Permite a un usuario iniciar sesión con email y contraseña
+      parameters:
+      - description: Credenciales de usuario
+        in: body
+        name: credentials
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.StandardResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.StandardResponse'
+      summary: Inicio de sesión
+      tags:
+      - Auth
+  /auth/register:
+    post:
+      consumes:
+      - application/json
+      description: Registra un nuevo usuario con nombre, email y contraseña
+      parameters:
+      - description: Datos del usuario
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/utils.StandardResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.StandardResponse'
+      summary: Registro de usuario
+      tags:
+      - Auth
   /tickets/:
     get:
       consumes:
